--- a/app/style.css
+++ b/app/style.css
@@ -1,91 +1,86 @@
-/* Couleurs des sous-menus */
 .bg-submenu-hover {
-  background-color: #3b4a5a; /* Par défaut, couleur de fond des sous-menus */
+  background-color: #3b4a5a;
 }
 
-/* Couleurs des items */
 .bg-item {
-  background-color: #3b4a5a; /* Par défaut, couleur de fond des items */
+  background-color: #3b4a5a;
 }
 
 .bg-item-hover {
-  background-color: #53657d; /* Par défaut, couleur de fond des items au survol */
+  background-color: #53657d;
 }
 
 .bg-card {
-  background-color: #ffffff; /* Par défaut, couleur de fond des cartes */
+  background-color: #ffffff;
 }
 
-/* Accentuation */
 .hover\:bg-accent:hover {
-  background-color: #9d9ea0; /* Par défaut, couleur de fond lors du survol */
+  background-color: #9d9ea0;
   color: #ffffff;
 }
 
 .text-accent-foreground {
-  background-color: #9d9ea0; /* Par défaut, fond des éléments d'accentuation */
+  background-color: #9d9ea0;
   color: #ffffff;
 }
 
-/* Mode sombre */
 .dark .bg-submenu-hover {
-  background-color: #53657d; /* Sous-menu en mode sombre */
-  box-shadow: 0 4px 6px rgba(255, 254, 254, 0.2); /* Ombre blanche en mode sombre */
+  background-color: #53657d;
+  box-shadow: 0 4px 6px rgba(255, 254, 254, 0.2);
 }
 
 .dark .bg-item {
-  background-color: #53657d; /* Item en mode sombre */
-  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.2); /* Ombre blanche en mode sombre */
+  background-color: #53657d;
+  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.2);
 }
 
 .dark .bg-item-hover {
-  background-color: #3b4a5a; /* Item au survol en mode sombre */
-  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.2); /* Ombre blanche en mode sombre */
+  background-color: #3b4a5a;
+  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.2);
 }
 
 .dark .bg-card {
-  background-color: #111111; /* Fond des cartes en mode sombre */
-  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.2); /* Ombre blanche en mode sombre */
+  background-color: #111111;
+  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.2);
   border: #ffffff;
 }
 
 .dark .hover\:bg-accent:hover {
-  background-color: #747a7f; /* Accentuation au survol en mode sombre */
+  background-color: #747a7f;
 }
 
 .dark .text-accent-foreground {
-  background-color: #747a7f; /* Fond des éléments d'accentuation en mode sombre */
-  color: #ffffff; /* Texte clair en mode sombre */
+  background-color: #747a7f;
+  color: #ffffff;
 }
 
-/* Mode clair */
 .light .bg-submenu-hover {
-  background-color: #3b4a5a; /* Sous-menu en mode clair */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Ombre noire en mode clair */
+  background-color: #3b4a5a;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .light .bg-item {
-  background-color: #3b4a5a; /* Item en mode clair */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Ombre noire en mode clair */
+  background-color: #3b4a5a;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .light .bg-item-hover {
-  background-color: #53657d; /* Item au survol en mode clair */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Ombre noire en mode clair */
+  background-color: #53657d;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .light .bg-card {
-  background-color: #ffffff; /* Fond des cartes en mode clair */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Ombre noire en mode clair */
+  background-color: #ffffff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   border: #ffffff;
 }
 
 .light .hover\:bg-accent:hover {
-  background-color: #9d9ea0; /* Accentuation au survol en mode clair */
+  background-color: #9d9ea0;
   color: #ffffff;
 }
 
 .light .text-accent-foreground {
-  background-color: #9d9ea0; /* Fond des éléments d'accentuation en mode clair */
-  color: #ffffff; /* Texte clair en mode clair */
+  background-color: #9d9ea0;
+  color: #ffffff;
 }
